# KappaConfig

./: .gitignore  README.md  TODO.md  requirements.txt  run_tests.md  setup.cfg
.github/scripts/: get_publish_type.py  publish_to.py  update_version.py
.github/workflows/: publish.yaml  release.yaml
kappaconfig/: __init__.py  error_messages.py  errors.py  resolver.py  yaml_loader.py  yaml_resolver.py
kappaconfig/entities/: grammar_tree_nodes.py  kc_dict.py  kc_list.py  kc_object.py  kc_scalar.py  wrappers.py
kappaconfig/functional/: accessor_grammar.py  convert.py  dotlist.py  dotlist_grammar.py  load.py  merge.py  parse_grammar.py  to_string.py  unpack_accessors.py  util.py
kappaconfig/grammar/: accessor_grammar.py  dotlist_grammar.py  parse_grammar.py  scalar_grammar.py  tree_nodes.py  tree_parser.py
kappaconfig/resolvers/: default_resolver.py  resolver.py  resolver_base.py
kappaconfig/resolvers/collection_resolvers/: collection_resolver.py  template_resolver.py  (+1 more)
tests_integration/: test_complex_yamls.py  test_merge.py
tests_integration/complex_yamls/: loggers_default_epochs.yaml  loggers_default_updates.yaml  schedule.result.yaml  schedule.yaml  test.yaml
tests_integration/templates/: schedule.yaml
tests_unit/: test_default_resolver_errors.py  test_resolver.py  test_yaml_loader.py  test_yaml_resolver.py
tests_unit/entities/: test_resolve.py  test_wrappers.py
tests_unit/functional/: test_accessor_grammar.py  test_convert.py  test_dotlist.py  test_load.py  test_merge.py  test_parse_grammar.py  test_to_string.py  test_unpack_accessor.py  test_util.py  test_util_merge.py
tests_unit/grammar/: test_accessor_grammar.py  test_dotlist_grammar.py  test_scalar_grammar.py  test_tree_parser.py
tests_unit/res/: basic.yaml
tests_unit/resolvers/: test_resolver.py
tests_unit/util/: trace.py
(+69 files in other folders)
