[metadata]
name = kappaconfig
version = 0.0.9description = A package for writing compact and flexible yamls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/KappaConfig
project_urls =
    Bug Tracker = https://github.com/BenediktAlkin/KappaConfig/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests_unit*