[metadata]

name = kappaconfig

version = 0.0.16
url = https://github.com/BenediktAlkin/KappaConfig

project_urls =

    Source Code = https://github.com/BenediktAlkin/KappaConfig

    Bug Tracker = https://github.com/BenediktAlkin/KappaConfig/issues

classifiers =

    Programming Language :: Python :: 3

    License :: OSI Approved :: MIT License

    Operating System :: OS Independent



[options]

packages = find:

python_requires = >=3.6



[options.packages.find]

exclude =

    tests_unit*